services/app/couber.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couber
  labels:
    app: couber
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: couber
  template:
    metadata:
      labels:
        app: couber
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
      - key: "kubernetes.io/hostname"
        operator: "Equal"
        value: "toybox"
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: couber
        image: ghcr.io/erebe/couber:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: videos
          mountPath: /home/app/data
      volumes:
      - name: videos
        persistentVolumeClaim:
          claimName: couber-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: couber
spec:
  selector:
    app: couber
  ports:
    - protocol: TCP
      port: 8081
  clusterIP: None
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coub
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - coub.erebe.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: couber
          port: 8081
      timeouts:
        request: "10m"
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: couber-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/app-root: /index.html
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
#    nginx.ingress.kubernetes.io/proxy-buffering: "off"
#    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
#    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      if ($request_uri ~* \.(js|css|gif|jpe?g|png)) {
#        expires 1M;
#        add_header Cache-Control "public";
#      }
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#spec:
#  ingressClassName: "nginx"
#  rules:
#  - host: coub.erebe.eu
#    http:
#      paths:
#      - path: /
#        pathType: Prefix 
#        backend:
#          service:
#            name: couber
#            port:
#              number: 8081
