services/app/warpgate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warpgate
  labels:
    app: warpgate
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: warpgate
  template:
    metadata:
      labels:
        app: warpgate
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - toybox
      containers:
      - name: warpgate
        image: ghcr.io/warp-tech/warpgate:0.29.2
        args:
          - "-c"
          - "/data/warpgate.yaml"
          - "run"
        ports:
        - containerPort: 2222
        - containerPort: 8888
        volumeMounts:
        - name: db
          mountPath: /data/
      volumes:
      - name: db
        hostPath:
          path: /opt/warpgate/
          type: Directory
      tolerations:
      - key: "kubernetes.io/hostname"
        operator: "Equal"
        value: "toybox"
        effect: "NoSchedule"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
---
apiVersion: v1
kind: Service
metadata:
  name: warpgate
spec:
  selector:
    app: warpgate
  ports:
    - protocol: TCP
      port: 8888
      name: http
    - protocol: TCP
      port: 2222
      name: ssh
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warpgate-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - "warp.erebe.eu"
    - "*.warp.erebe.eu"
    secretName: warpgate-tls
  rules:
  - host: "warp.erebe.eu"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: warpgate
            port:
              number: 8888
  - host: "*.warp.erebe.eu"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: warpgate
            port:
              number: 8888
